<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="115dp"
        android:layout_height="55dp"
        android:layout_marginTop="91.4dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:src="@mipmap/qq_icon"
            android:contentDescription="@string/qq" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="33.95sp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/qq_sgin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="316.8dp"
        android:layout_height="120.5dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="182.3dp"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="5"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="@color/login_color">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@color/login_color"
                android:src="@mipmap/qq_iconfder"/>
            <EditText
                android:id="@+id/inputAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:background="@color/transport"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:hint="@string/qq_phone_email" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_margin="2dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">
            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/login_color"
                android:textAlignment="center"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:hint="@string/input_password" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="139dp"
        android:layout_height="55dp"
        android:layout_marginTop="349.5dp"
        android:layout_gravity="center_horizontal"
        app:cardElevation="0dp"
        app:cardCornerRadius="30dp">
        <Button
            android:id="@+id/qqLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:background="@drawable/circle_btn"
            android:textColor="#ffffff"
            android:enabled="false"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="47.7dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <TextView
            android:id="@+id/findPassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textColor="@color/colorBlack"
            android:gravity="center"
            android:text="@string/find_password"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/DimGray"/>
        <TextView
            android:id="@+id/userRegistration"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:text="@string/new_register"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>